sidebar mobile layout

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -81,6 +81,7 @@ $zen-auto-include-item-base: false;
     }
     .studio-phone {
       float: left;
+      margin-right: 0.5em;
     }
     .studio-email {
       a {
