sidebar mobile layout

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -57,6 +57,7 @@ $zen-auto-include-item-base: false;
   width: 100%;
 }
   h1.header__site-name {
+    font-size: 1.9em;
     line-height: 1.25em;
     a {
       &:link,
