sidebar mobile layout

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -93,6 +93,7 @@ $zen-auto-include-item-base: false;
 
   #block-block-2 {
     margin-bottom: 0;
+    padding-left: 5px;
   }
 #content {
   margin-top: 6em;
